<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movie_fragment"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/movie" />
    <item
        android:id="@+id/tv_fragment"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/tvshow" />
    <item
        android:id="@+id/favorite_fragment"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite" />

</menu>